--- a/6.1.2.html
+++ b/6.1.2.html
@@ -1,331 +1,360 @@
 <!DOCTYPE html>
-<html lang="vi">
+<html lang="en">
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>6.1.2</title>
+
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/4.6.0/remixicon.min.css">
+
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
+
+    <link href="https://fonts.googleapis.com/css2?family=Jolly+Lodger&family=Montserrat:wght@400;500;700&display=swap"
+        rel="stylesheet">
+
     <style>
         :root {
-            --card-w: 360px;
-            --card-h: 520px;
-            --accent: #ff3d9e;
-            --accent2: #ffcc00;
-            --bg1: linear-gradient(180deg, #ffecd2 0%, #fcb69f 100%);
-            --glass: rgba(255, 255, 255, 0.08);
+            --header-height: 3.5rem;
+            --first-color: hsl(185, 100%, 48%);
+            --white-color: hsl(0, 0%, 100%);
+            --black-color: hsl(222, 100%, 2%);
+            --radial-color: radial-gradient(52% 52% at 50% 50%, hsl(202, 90%, 38%) 0%, hsl(222, 100%, 6%) 100%);
+            --body-font: "Montserrat", sans-serif;
+            --second-font: "Jolly Lodger", cursive;
+            --biggest-font-size: 3rem;
+            --big-font-size: 1.5rem;
+            --h2-font-size: 1.25rem;
+            --normal-font-size: .938rem;
+            --small-font-size: .813rem;
+            --font-regular: 400;
+            --font-medium: 500;
+            --z-tooltip: 10;
+            --z-fixed: 100;
         }
 
-        html,
-        body {
-            height: 100%;
+        * {
+            box-sizing: border-box;
+            padding: 0;
             margin: 0;
-            font-family: "Poppins", "Segoe UI", sans-serif;
-            background: var(--bg1);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #333;
-            overflow: hidden;
         }
 
-        .card {
-            width: var(--card-w);
-            height: var(--card-h);
-            border-radius: 20px;
-            position: relative;
-            overflow: hidden;
-            box-shadow: 0 10px 30px rgba(255, 120, 120, 0.4);
-            background: linear-gradient(180deg, rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.6));
-            padding: 20px;
+        body {
+            font-family: var(--body-font);
+            font-size: var(--normal-font-size);
+            background-color: var(--black-color);
+            color: var(--white-color);
+        }
+
+        ul {
+            list-style: none;
+        }
+
+        img {
+            display: block;
+            max-width: 100%;
+            height: auto;
+        }
+
+        .container {
+            max-width: 1120px;
+            margin-inline: 1.5rem;
+        }
+
+        .header {
+            position: fixed;
+            width: 100%;
+            top: 0;
+            left: 0;
+            background: transparent;
+            z-index: var(--z-fixed);
+            transition: background-color .3s;
+        }
+
+        .nav {
+            height: var(--header-height);
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .nav__logo {
+            color: var(--white-color);
+            font-family: var(--second-font);
+            font-size: var(--h2-font-size);
+            transition: text-shadow .3s;
+        }
+
+        .nav__logo:hover {
+            text-shadow: 0 2px 8px var(--first-color);
+        }
+
+        .nav__toggle,
+        .nav__close {
+            display: flex;
+            font-size: 1.25rem;
+            cursor: pointer;
+        }
+
+        .nav__menu {
+            position: fixed;
+            top: -100%;
+            left: 0;
+            background-color: var(--black-color);
+            width: 100%;
+            padding-block: 5rem 4.5rem;
+            transition: top .4s;
+        }
+
+        .nav__list {
             display: flex;
             flex-direction: column;
-            align-items: center;
-            gap: 12px;
-            backdrop-filter: blur(10px);
-        }
-
-        .title {
-            margin-top: 8px;
-            font-size: 22px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-            color: #ff4081;
-            text-shadow: 0 4px 18px rgba(255, 64, 129, 0.25);
-        }
-
-        .name {
-            font-size: 32px;
-            font-weight: 700;
-            color: #ff6f61;
-            margin: 6px 0;
-            animation: pop 1.2s ease-in-out infinite;
-            text-shadow: 0 6px 16px rgba(255, 111, 97, 0.4);
-        }
-
-        @keyframes pop {
-
-            0%,
-            100% {
-                transform: translateY(0) scale(1);
-            }
-
-            50% {
-                transform: translateY(-6px) scale(1.05);
-            }
-        }
-
-        .info {
             text-align: center;
-            font-size: 15px;
-            color: #444;
-            opacity: 0.95;
-            line-height: 1.4;
+            row-gap: 3rem;
         }
 
-        .rsvp {
-            margin-top: auto;
+        .nav__link {
+            color: var(--white-color);
+            font-weight: var(--font-medium);
+            transition: text-shadow .3s;
+        }
+
+        .nav__link:hover {
+            text-shadow: 0 2px 8px var(--first-color);
+        }
+
+        .nav__close {
+            position: absolute;
+            top: 1rem;
+            right: 1.5rem;
+        }
+
+        .show-menu {
+            top: 0;
+        }
+
+        .bg-header {
+            background-color: var(--black-color);
+        }
+
+
+        .home {
+            position: relative;
+            height: 100vh;
+            background-color: var(--black-color);
+        }
+
+        .home__container {
+            position: relative;
+            height: 70%;
+            background: var(--radial-color);
+            display: grid;
+            justify-items: center;
+            overflow: hidden;
+        }
+
+        .home__container img {
+            position: absolute;
+        }
+
+        .home__grass,
+        .home__pumpkin {
+            bottom: 0;
+        }
+
+        .home__stone {
+            bottom: -.5rem;
+            width: 470px;
+        }
+
+        .home__tree {
+            bottom: .5rem;
+            width: 470px;
+        }
+
+        .home__moon {
+            bottom: 2rem;
+            width: 590px;
+        }
+
+        .home__shadow,
+        .home__points {
+            top: 0;
+            left: 0;
             width: 100%;
-            display: flex;
-            gap: 10px;
-            justify-content: center;
-            padding-bottom: 18px;
+            height: 100%;
+            object-fit: cover;
         }
 
-        .btn {
-            padding: 10px 16px;
-            border-radius: 12px;
-            border: none;
-            cursor: pointer;
-            font-weight: 600;
-            background: linear-gradient(90deg, #ff6f61, #ff3d9e);
-            color: white;
-            box-shadow: 0 6px 18px rgba(255, 107, 107, 0.4);
-            transition: transform .18s ease, box-shadow .18s ease;
+        .home__shadow {
+            mix-blend-mode: overlay;
         }
 
-        .btn:active {
-            transform: translateY(2px) scale(.995);
-        }
-
-        .btn.secondary {
-            background: linear-gradient(90deg, #ffd166, #ff9a36);
-            color: #fff;
-            box-shadow: 0 6px 18px rgba(255, 209, 102, 0.4);
-        }
-
-
-        .balloon {
+        .home__titles {
             position: absolute;
-            bottom: -120px;
-            width: 64px;
-            height: 90px;
-            border-radius: 50% 50% 48% 48%;
-            transform-origin: bottom center;
-            opacity: 0.95;
-            filter: drop-shadow(0 4px 6px rgba(0, 0, 0, 0.2));
-        }
-
-        .balloon::after {
-            content: '';
-            position: absolute;
-            left: 50%;
-            transform: translateX(-50%);
-            bottom: -22px;
-            width: 2px;
-            height: 28px;
-            background: rgba(0, 0, 0, 0.2);
-        }
-
-        .b1 {
-            left: 20px;
-            background: linear-gradient(180deg, #ff6b6b, #ff9e9e);
-            animation: floatUp 9s linear infinite;
-        }
-
-        .b2 {
-            left: 90px;
-            background: linear-gradient(180deg, #ffd166, #fff5a3);
-            animation: floatUp 11s linear infinite;
-        }
-
-        .b3 {
-            left: 160px;
-            background: linear-gradient(180deg, #9be7ff, #4fc3f7);
-            animation: floatUp 10s linear infinite;
-        }
-
-        .b4 {
-            left: 230px;
-            background: linear-gradient(180deg, #b39cff, #7b61ff);
-            animation: floatUp 12s linear infinite;
-        }
-
-        .b5 {
-            left: 300px;
-            background: linear-gradient(180deg, #a8ff78, #78ffd6);
-            animation: floatUp 13s linear infinite;
-        }
-
-        @keyframes floatUp {
-            0% {
-                bottom: -140px;
-                opacity: 0;
-            }
-
-            10% {
-                opacity: 1;
-            }
-
-            50% {
-                bottom: 300px;
-            }
-
-            100% {
-                bottom: 720px;
-                opacity: 0;
-            }
-        }
-
-        .confetti {
-            position: absolute;
-            inset: 0;
-            pointer-events: none;
-        }
-
-        .confetti i {
-            position: absolute;
-            width: 8px;
-            height: 14px;
-            opacity: 0.95;
-            transform-origin: center;
-            border-radius: 2px;
-            animation: conf 6s linear infinite;
-        }
-
-        .confetti i:nth-child(1) {
-            left: 10%;
-            background: #ff6b6b;
-            animation-delay: 0s;
-        }
-
-        .confetti i:nth-child(2) {
-            left: 22%;
-            background: #ffd166;
-            animation-delay: .3s;
-        }
-
-        .confetti i:nth-child(3) {
-            left: 34%;
-            background: #9be7ff;
-            animation-delay: .8s;
-        }
-
-        .confetti i:nth-child(4) {
-            left: 46%;
-            background: #b39cff;
-            animation-delay: 1.1s;
-        }
-
-        .confetti i:nth-child(5) {
-            left: 58%;
-            background: #2ecc71;
-            animation-delay: .6s;
-        }
-
-        .confetti i:nth-child(6) {
-            left: 70%;
-            background: #ff9ad5;
-            animation-delay: 0.9s;
-        }
-
-        .confetti i:nth-child(7) {
-            left: 82%;
-            background: #ff6b6b;
-            animation-delay: 1.4s;
-        }
-
-        .confetti i:nth-child(8) {
-            left: 50%;
-            background: #ffd166;
-            animation-delay: 1.8s;
-        }
-
-        .confetti i:nth-child(9) {
-            left: 28%;
-            background: #9be7ff;
-            animation-delay: 2.1s;
-        }
-
-        .confetti i:nth-child(10) {
-            left: 64%;
-            background: #b39cff;
-            animation-delay: 2.4s;
-        }
-
-        @keyframes conf {
-            0% {
-                transform: translateY(-10vh) rotate(0deg);
-                opacity: 1;
-            }
-
-            100% {
-                transform: translateY(110vh) rotate(720deg);
-                opacity: 0.12;
-            }
-        }
-
-        .footer {
-            font-size: 12px;
-            color: #555;
-            margin-top: 6px;
+            bottom: 11rem;
             text-align: center;
         }
 
-        @media (max-width:420px) {
-            :root {
-                --card-w: 320px;
-                --card-h: 500px;
-            }
+        .home__subtitle,
+        .home__title {
+            color: var(--black-color);
+            font-family: var(--second-font);
+            font-weight: var(--font-regular);
+            text-shadow: 0 2px 8px var(--first-color);
+        }
 
-            .balloon {
-                width: 54px;
-                height: 76px;
-            }
+        .home__subtitle {
+            font-size: var(--big-font-size);
+        }
+
+        .home__title {
+            font-size: var(--big-font-size);
+        }
+
+        .home__data {
+            position: absolute;
+            bottom: 4rem;
+            text-align: center;
+            margin-inline: 1.5rem;
+        }
+
+        .home__description {
+            margin-bottom: 2rem;
+        }
+
+        .home__button {
+            display: inline-grid;
+            position: relative;
+            place-items: center;
+            transition: filter .4s;
+        }
+
+        .home__button span {
+            position: absolute;
+            color: var(--white-color);
+            font-size: var(--small-font-size);
+            font-weight: var(--font-medium);
+        }
+
+        .home__button:hover {
+            filter: drop-shadow(0 4px 24px hsla(185, 100%, 48%, .6));
+        }
+
+
+        ::-webkit-scrollbar {
+            width: .6rem;
+            background-color: hsl(202, 16%, 15%);
+        }
+
+        ::-webkit-scrollbar-thumb {
+            background-color: hsl(202, 16%, 25%);
         }
     </style>
 </head>
 
 <body>
+    <header class="header" id="header">
+        <nav class="nav container">
+            <a href="#" class="nav__logo">Halloween</a>
+            <div class="nav__menu" id="nav-menu">
+                <ul class="nav__list">
+                    <li><a href="#" class="nav__link">Home</a></li>
+                    <li><a href="#" class="nav__link">About Us</a></li>
+                    <li><a href="#" class="nav__link">Portfolio</a></li>
+                    <li><a href="6.1.2.contact.html" class="nav__link">Contact Us</a></li>
+                </ul>
+                <div class="nav__close" id="nav-close"><i class="ri-close-line"></i></div>
+            </div>
+            <div class="nav__toggle" id="nav-toggle"><i class="ri-apps-2-line"></i></div>
+        </nav>
+    </header>
 
-    <div class="card">
-        <div class="title">INVITATION</div>
-        <div class="name">Birthday party!</div>
+    <main class="main">
+        <section class="home">
+            <div class="home__container">
+                <img src="c:\web\img\images\home-point.png" alt="points" class="home__points">
+                <img src="c:\web\img\images\home-shadow.png" alt="shadow" class="home__shadow">
+                <img src="c:\web\img\images\home-moon.png" alt="moon" class="home__moon">
+                <img src="c:\web\img\images\home-trees.png" alt="trees" class="home__tree">
+                <img src="c:\web\img\images\home-pumpkin.png" alt="pumpkin" class="home__pumpkin">
+                <img src="c:\web\img\images\home-stones.png" alt="stones" class="home__stone">
+                <img src="c:\web\img\images\home-grass.png" alt="grass" class="home__grass">
 
-        <div class="info">
-            <strong>Name:</strong>xyz<br>
-            <strong>Time:</strong> 18:30 - Tuesday, 21/10/2025<br>
-            <strong>Place:</strong>xyz<br><br>
-        </div>
+                <div class="home__titles">
+                    <h2 class="home__subtitle">TRICK OR TREAT</h2>
+                    <h1 class="home__title">HALLOWEEN</h1>
+                </div>
+            </div>
 
-        <div class="rsvp">
-            <button class="btn" onclick="alert('Thanks! See u at the party 🎉')">Yess</button>
-            <button class="btn secondary" onclick="location.href='mailto:ynguyen.bmt2101@gmail.com'">Email</button>
-        </div>
+            <div class="home__data">
+                <p class="home__description">
+                    Halloween is celebrated every October 31 at night, walk through the city with your friends and enjoy
+                    trick or treating, spend a terrifying night under the full moon.
+                </p>
+                <a href="#" class="home__button">
+                    <img src="c:\web\img\images\button.svg" alt="button">
+                    <span>CLICK HERE</span>
+                </a>
+            </div>
+        </section>
+    </main>
 
-        <div class="footer">Dress code: </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-        <div class="balloon b1"></div>
-        <div class="balloon b2"></div>
-        <div class="balloon b3"></div>
-        <div class="balloon b4"></div>
-        <div class="balloon b5"></div>
+    <script>
+        const navMenu = document.getElementById('nav-menu'),
+            navToggle = document.getElementById('nav-toggle'),
+            navClose = document.getElementById('nav-close');
 
-        <div class="confetti">
-            <i></i><i></i><i></i><i></i><i></i>
-            <i></i><i></i><i></i><i></i><i></i>
-        </div>
-    </div>
+        if (navToggle) {
+            navToggle.addEventListener('click', () => {
+                navMenu.classList.add('show-menu');
+            });
+        }
 
+        if (navClose) {
+            navClose.addEventListener('click', () => {
+                navMenu.classList.remove('show-menu');
+            });
+        }
+
+
+        const navLink = document.querySelectorAll('.nav__link');
+        navLink.forEach(n => n.addEventListener('click', () => {
+            navMenu.classList.remove('show-menu');
+        }));
+
+
+        const bgHeader = () => {
+            const header = document.getElementById('header');
+            if (window.scrollY >= 50) header.classList.add('bg-header');
+            else header.classList.remove('bg-header');
+        };
+        window.addEventListener('scroll', bgHeader);
+
+        gsap.from(".home__shadow", { opacity: 0, y: -300, duration: 1.5, delay: 0.2 });
+        gsap.from(".home__points", { opacity: 0, y: -300, duration: 1.5, delay: 0.4 });
+        gsap.from(".home__grass", { opacity: 0, y: 300, duration: 1.5, delay: 0.6, ease: "elastic.out(1, .5)" });
+        gsap.from(".home__pumpkin", { opacity: 0, y: -300, duration: 1.5, delay: 0.8, ease: "bounce.out" });
+        gsap.from(".home__moon", { opacity: 0, y: 300, duration: 1.5, delay: 1.0, ease: "elastic.out(1, .5)" });
+        gsap.from(".home__titles", { opacity: 0, y: -300, duration: 1.5, delay: 1.2, ease: "elastic.out(1, .5)" });
+        gsap.from(".home__tree", { opacity: 0, y: 300, duration: 1.5, delay: 1.4, ease: "elastic.out(1, .5)" });
+        gsap.from(".home__data", { opacity: 0, y: 200, duration: 1.5, delay: 1.6, ease: "elastic.out(1, .5)" });
+
+        new Swiper(".testimonial-swiper", {
+            spaceBetween: 30,
+            loop: true,
+        });
+    </script>
 </body>
 
 </html>
